Added posts and new shopping list fun.

--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -3,5 +3,6 @@
 <ul>
   <li><%= link_to "Add/Modify Food Items", :controller => "foods" %></li>
   <li><%= link_to "View Food Shopping List", :controller => "shoppinglist", :action => "food" %></li>
-  <li>View Toy Shopping List</li>
+  <li><%= link_to "View Toy Shopping List", :controller => "shoppinglist", :action => "toys" %></li>
+  <li><%= link_to "Add Homepage Message", new_post_url %>
 </ul>
