--- a/app/views/families/show.html.erb
+++ b/app/views/families/show.html.erb
@@ -74,8 +74,10 @@
   <b>Reserve:</b>
   <%= @family.reserve %>
 </p>
-
-
-<%= link_to 'Edit', edit_family_path(@family) %> |
-<%= link_to 'Back', families_path %> | 
-<%= link_to "Children", family_children_path(@family)%>
+<% content_for :sidenav do%>
+<ul class="main_menu">
+	<li><%= link_to 'All Families', families_path %>
+	<li><%= link_to 'Edit this Family', edit_family_path(@family) %></li>
+	<li><%= link_to "Children", family_children_path(@family)%></li>
+</ul>
+<% end %>
